...
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:textSize="@dimen/textsize_large"/>
                
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/item_name_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/item_name_editext"
                        android:textSize="@dimen/textsize_small"
                        android:drawablePadding="@dimen/padding_large"
                        android:paddingStart="@dimen/padding_large"
                        android:paddingEnd="@dimen/padding_large"
                        android:paddingTop="@dimen/form_padding_top"
                        android:maxLines="1"
...
                    android:id="@+id/pick_up_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_up_point"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="@id/pick_up_search_location"
                    app:layout_constraintBottom_toBottomOf="@id/pick_up_search_location"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:textSize="@dimen/textsize_large"/>
                
                
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pick_up_point_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/pick_up_title">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pick_up_point_editext"
                        android:textSize="@dimen/textsize_small"
                        android:drawablePadding="@dimen/padding_large"
                        android:paddingStart="@dimen/padding_large"
                        android:paddingEnd="@dimen/padding_large"
                        android:paddingTop="@dimen/form_padding_top"
                        android:maxLines="1"
...
                    android:id="@+id/destination_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/destination"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="@id/destination_search_location"
                    app:layout_constraintBottom_toBottomOf="@id/destination_search_location"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:textSize="@dimen/textsize_large"/>
                
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/destination_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/destination_title">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/destination_editext"
                        android:textSize="@dimen/textsize_small"
                        android:drawablePadding="@dimen/padding_large"
                        android:paddingStart="@dimen/padding_large"
                        android:paddingEnd="@dimen/padding_large"
                        android:paddingTop="@dimen/form_padding_top"
                        android:maxLines="1"
...
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="Ride Date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize_large"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/delivery_date_select_button"
                    app:layout_constraintTop_toTopOf="@+id/delivery_date_select_button" />
        
                <TextView
                    android:id="@+id/delivery_date_select_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize_large"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
        
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/additional_info_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
...
