...
                        android:textSize="@dimen/textsize_normal"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>
            
                    <TextView
                        android:id="@+id/summary_item_name_textview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:layout_marginBottom="@dimen/margin_normal"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:padding="@dimen/padding_small"
...
                        android:textSize="@dimen/textsize_normal"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>
            
                    <TextView
                        android:id="@+id/summary_pick_up_textview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:layout_marginBottom="@dimen/margin_normal"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:padding="@dimen/padding_small"
...
                        android:textSize="@dimen/textsize_normal"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>
            
                    <TextView
                        android:id="@+id/summary_destination_textview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:layout_marginBottom="@dimen/margin_normal"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:padding="@dimen/padding_small"
...
                        android:textSize="@dimen/textsize_normal"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>
        
                    <TextView
                        android:id="@+id/summary_pickup_date_textview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:layout_marginBottom="@dimen/margin_normal"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:padding="@dimen/padding_small"
...
                        android:padding="@dimen/padding_small"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textsize_normal"
                        app:layout_constraintStart_toStartOf="parent"/>
            
                    <TextView
                        android:id="@+id/additional_info_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_normal"
                        android:layout_marginBottom="@dimen/margin_normal"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:padding="@dimen/padding_small"
...
