...
    <string name="delivery_cancelled">Delivery Cancelled</string>
    <string name="pick_up_point">Pick-Up Point</string>
    <string name="destination">Destination</string>
    <string name="additional_information">Additional Information</string>
    <string name="pick_up_date">Pick-Up Date</string>
    <string name="item_name_capitalized">Item Name</string>
    <string name="empty_item_name_error">Enter name of package to be delivered</string>
    <string name="empty_pickup_address_error">Select or enter item pick-up address</string>
    <string name="empty_destination_address_error">Select or enter destination address</string>
    <string name="empty_pick_up_date_error">Select a date for us to pickup your item</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="track_delivery">Track Delivery</string>

    <string name="new_user_salutation">Welcome,</string>

    <string name="new_login_salutation">Welcome back,</string>
    <string name="estimated_time_of_arrival">Estimated Time of Arrival</string>
    <string name="pick_up_date_title">Pick Up Date</string>
    <string name="new_delivery">New Delivery</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_delivery">Cancel Delivery</string>
    <string name="confirm_cancel_delivery">Are you sure you want to cancel your delivery?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

...
