<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewModel" type="com.example.deliveryapp.ui.new_delivery.NewDeliveryViewModel"/>
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/container"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.new_delivery.NewDeliveryActivity">
    
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="@dimen/card_elevation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/myToolbarButtonStyle" />
        
            
            <FrameLayout
                android:id="@+id/form_frame"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_normal"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintBottom_toTopOf="@id/next_button"
                android:visibility="gone"/>
    
        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="@dimen/margin_large"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_large"
            android:background="@drawable/cancel_button_background"
            android:clickable="false"
            android:text="@string/back"
            android:textColor="@color/grey"
            android:textSize="@dimen/textsize_large" />
    
        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/margin_normal"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_large"
            android:background="@drawable/color_button_background"
            android:clickable="false"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_large" />
    
        <include
            android:id="@+id/loading_layout"
            layout="@layout/loading_screen"
            app:networkState="@{viewModel.networkState}"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>